# PHYS4070-A1

report/: ReportTemplate.aux  ReportTemplate.out  ReportTemplate.tex
src/: CMakeLists.txt  README.txt
src/main/: main.cpp
src/math/: eigen.cpp  eigen.hpp  lapack.hpp  matrix.cpp  matrix.hpp
src/provided/: bspline-example.cpp
